correct time complexity

--- a/polytime.tex
+++ b/polytime.tex
@@ -521,7 +521,7 @@
             \item A clause, $A$, of length less than $k$
             \item A clause, $B$, of length less than $k$
             \item A clause, $C$, of length less than $k$
-            \item A clause, $A$, of length $k$ or $k - 1$
+            \item A clause, $D$, of length $k$ or $k - 1$
             \item $A$ and $B$ imply $E$ by Lemma 5.9
             \item $C$ and $E$ imply $D$ by Lemma 5.9
         \end{itemize}
